tests/diagnostics/cases/types/06_top_level_type_mismatch.home
// Type mismatch outside a function body (top-level binding).
let x: i32 = "hello"

fn main() {}
